--- a/goods-svc/pom.xml
+++ b/goods-svc/pom.xml
@@ -36,7 +36,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.k8s.ConfigApplication</mainClass>
+                    <mainClass>com.k8s.GoodsApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
