--- a/doc/ingress-order.yaml
+++ b/doc/ingress-order.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: ingress-demo
+  name: ingress-order
   namespace: default
   annotations:
     kubernetes.io/ingress.class: "traefik"
